# RegistroDeMascotas

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mainwindow.ui
Semestral/: CMakeLists.txt  RegistroDeMascotas_es_PA.ts
doc/: DataBase_RegistroDeMascotas.db
include/: controlwidget.h  mainwindow.h  mascota.h  tcpclientmanager.h
src/: controlwidget.cpp  main.cpp  mainwindow.cpp  tcpclientmanager.cpp
ui/: controlwidget.ui  mainwindow.ui
